--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ChatActivity"/>
+        <activity
+            android:name=".ChoiceActivity"/>
+        <activity
+            android:name=".PostActivity"/>
     </application>
 
 </manifest>
